# vflog

./: .clangd  .gitignore  CMakeLists.txt  Dockerfile  README.md
include/: buffer.cuh  column.cuh  debug.cuh  hash.cuh  hisa.cuh  io.cuh  memory_manage.cuh  mir.cuh  ra.cuh  ram.cuh  ram_instruction.cuh  relation.cuh  utils.cuh  vflog.cuh
src/: column.cu  deduplication.cu  deduplication.hip  hisa.cu  hisa.hip  indexing.cu  indexing.hip  io.cu  io.hip  mir.cu  persistence.cu  persistence.hip  ram.cu  relation.cu
src/mir/: clause.cu  copy.cu  decl.cu  join.cu  mir.cu  rule.cu  scc.cu
src/ra/: copy.cu  fixpoint.cu  index.cu  join.cu  misc.cu  negate.cu  project.cu
src/ram/: cartesian.cu  copy.cu  fact.cu  fixpoint.cu  id_join.cu  join.cu  join_filtered.cu  materialization.cu  multi_arity_join.cu  negate.cu  ram_instruction.cu
test/: CMakeLists.txt
test/rdf/: lubm.rls  lubm.vlog  lubm_excluded.rls  sg.rls  sg.vlog  sg2.rls  sg2.vlog  tc.rls
test/souffle/: cspa.dl  extract_string.py  lubm.dl  lubm.ram  lubm.trans.dl  lubm2.dl  lubm_load.dl  owl_el.dl  polonius-init.ram  polonius-init.trans.dl  polonius.dl  polonius.ram  polonius.res  polonius.slog  sg.dl  tc.dl  test  test.cpp
test/src/: cspa.cu  el-calc.cu  hisa_test.cu  lubm_test.cu  lubm_test.hip  mir_test.cu  owl_el.cu  polonius.cu  sg_shared.cu  sg_test.cu  sg_test.hip  tc_test.cu  tc_test.h  tc_test.hip
